avoid log-entry px shift causing horizontal scroll

--- a/front/src/app/components/game-log/game-log.component.scss
+++ b/front/src/app/components/game-log/game-log.component.scss
@@ -73,7 +73,6 @@
 
       &:hover {
         background: rgba(255, 255, 255, 0.1);
-        transform: translateX(2px);
       }
     }
   }
